app/assets/stylesheets/shared_elements.css.scss
/* 4. SHARED ELEMENTS
-------------------------------------------------------------- */
ul.following-thread {
  @include list-reset-soft;
  margin: 10px 0 !important;
  border-top: 1px solid $paneborder;
  li {
    a {
      background: $pane1;
      display: block;
      border-bottom: 1px solid $paneborder;
      color: $lightblack;
      overflow: hidden;
      padding: 5px;
      &:hover{
        text-decoration: none;
        background: $pane2;
      }
      img.thumb {
        float: left;
        width: 20px;
        height: 20px;
        border: 2px solid $white;
      }
      p {
        margin: 0 0 0 10px;
        float: left;
        strong {
          font-weight: bold;
        }
      }
    }
  }
}

// Will Paginate compatible styling
.pagination {
  span, a, em {
    display: block;
    float: left;
    background: $pane1;
    margin: 0 2px;
    padding-top: 1px;
    width: 22px;
    height: 21px;
    font-size: 14px;
    text: {
      align: center;
      decoration: none;
    }
    color: $lightgrey2;
    &:hover {
      color: $pane1;
      background: $lightergrey;
    }
    &.previous_page {
      text-indent: -999999px;
      background: $pane1 image-url("sprite.png") 4px -42px no-repeat;
      &:hover {
        background: $lightergrey image-url("sprite.png") 4px -62px no-repeat;
      }
    }
    &.next_page {
      text-indent: -999999px;
      background: $pane1 image-url("sprite.png") 5px -82px no-repeat;
      &:hover {
        background: $lightergrey image-url("sprite.png") 5px -102px no-repeat;
      }
    }
  }
  em {
    font-weight: bold;
  }
}

section.thread {
  @include list-reset-soft;
  margin: 20px 0;
  article.message {
    padding: 20px 10px;
    border-bottom: 3px solid $grey;
    &:last-child {
      border-bottom: none;
    }
    a.thumbnail {
      border: 4px solid $lightergrey;
      display: block;
      width: 42px;
      height: 42px;
      float: left;
      margin-right: 20px;
    }
    .author {
      color: $lightgrey;
      font: {
        weight: normal;
        size: 12px;
      }
    }
    .body {
      overflow: hidden;
      position: relative;
      .readmore {
        overflow: hidden;
        margin-top: 10px;
        width: 540px;
        height: 75px;
        float: left;
      }
      .read-more-box {
        width: 540px;
        float: right;
      }
    }
    &.unread {
      background: $pane1;
      border: 1px solid $grey;
      .read-more-box {
        background: image-url("read-more-box-bg-grey.png") 0 0 repeat-x;
        &.active {
          background: none;
        }
      }
      div .tools {
        right: 0;
      }
    }
  }
}

// Tools/actions menu hidden until item is hovered over
.tools {
  position: absolute;
  right: 999999px;
  top: 0;
  background: $pane1 image-url("sprite.png") 0 0 no-repeat;
  width: 32px;
  height: 21px;
  border: 1px solid $lightergrey;
  @include border-radius(2px);
  &:hover {
    cursor: pointer;
    background: $pane2 image-url("sprite.png") 0 -20px no-repeat;
  }
  ul {
    @include list-reset;
    right: 999999px;
    top: 20px;
    position: absolute;
    width: 180px;
    background: white;
    @include border-radius(2px);
    border: 1px solid $lightergrey;
    padding: 6px;
  }
  &.reveal ul {
    right: 0;
  }
}
article:hover > menu.tools, header:hover > menu.tools {
  right: 0;
}

.thread-list {
  @include list-reset-soft;
  margin: 20px 0;
  border-top: 3px solid $grey;
  li {
    padding: 20px 0;
    border-bottom: 3px solid $grey;
    overflow: hidden;
    .item-content {
      margin: 0 30px 0 0;
      float: left;
      width: 390px;
      h4 {
        margin: 3px 0 10px 0;
      }
    }
    &.car-parking {
      padding-left:42px;
      background: image-url("map-icons/m-car-parking.png") 0 20px no-repeat;
    }
    &.cycle-parking {
      padding-left:42px;
      background: image-url("map-icons/m-cycle-parking.png") 0 20px no-repeat;
    }
    &.cycle-path {
      padding-left:42px;
      background: image-url("map-icons/m-cycle-path.png") 0 20px no-repeat;
    }
    &.misc {
      padding-left:42px;
      background: image-url("map-icons/m-misc.png") 0 20px no-repeat;
    }
    &.obstruction {
      padding-left:42px;
      background: image-url("map-icons/m-obstruction.png") 0 20px no-repeat;
    }
    &.planning {
      padding-left:42px;
      background: image-url("map-icons/m-planning.png") 0 20px no-repeat;
    }
    &.roadworks {
      padding-left:42px;
      background: image-url("map-icons/m-roadworks.png") 0 20px no-repeat;
    }
    .permissions {
      float:right;
    }
  }
}

.meta {
  p {
    font-size: 12px;
    color: $lightgrey;
    margin-bottom: 8px;
  }
  a,
  span {
    color: $grey2;
  }
}

.permissions {
  width: 60px;
  color: $lightgrey;
  text: {
    align: right;
    transform: uppercase;
  }
  font: {
    size: 11px;
    weight: bold;
  }
}



#page aside#sidebar section.map {
  padding: 10px;
}


.minimap {
  position: relative;
  padding: 0 10px;
  height: 210px;
}
.map img {
  display:block;
}
.map-tools {
  position: absolute;
  right: 0;
  bottom: 0;
  display: block;
  background: $white;
  padding: 5px 0 0 5px;
  button {
    display: block;
    float: left;
    width: 27px;
    height: 27px;
    border: none;
    text-indent: -999999px;
    &.person {
      margin-right: 5px;
      background: image-url("sprite.png") -3px -130px no-repeat;
      &:hover {
        background-position: -43px -130px;
      }
    }
    &.zoom {
      background: image-url("sprite.png") -3px -180px no-repeat;
      &:hover {
        background-position: -43px -180px;
      }
    }
  }
}
/* ... */

